[package]
name = "pdcurses-sys"
description = "FFI bindings for PDCurses, specifically the win32a implementation."
homepage = "https://github.com/ihalila/pdcurses-sys"
repository = "https://github.com/ihalila/pdcurses-sys"
readme = "README.md"
license = "MIT"
keywords = ["pdcurses", "curses"]
version = "0.2.0"
authors = ["Ilkka Halila <ilkka@hali.la>"]
links = "pdcurses"
build = "build.rs"

[lib]
name = "pdcurses"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"
